--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -10,7 +10,7 @@ visible_in_sidebar: true
 This is the initiating payment channel.
 
 | type       | description            |
-|------------|------------------------|
+| ---------- | ---------------------- |
 | `INT`      | Internet Portal        |
 | `INTB`     | Internet Banking       |
 | `MOB`      | Mobile Application     |
@@ -23,13 +23,12 @@ This is the initiating payment channel.
 | `POS`      | POS                    |
 | `MPOS`     | MPOS                   |
 
-
 ## Payment Mode
 
 Payment modes supported by a biller.
 
 | type             |
-|------------------|
+| ---------------- |
 | Cash             |
 | Internet Banking |
 | Credit Card      |
@@ -44,53 +43,48 @@ Payment modes supported by a biller.
 | Bharat QR        |
 | USSD             |
 
-
 ## Customer
 
 Customer object holds the customer mobile number and the customer bill parameters.
 
 | parameter                | type                               | description                                                                                        |
-|--------------------------|------------------------------------|----------------------------------------------------------------------------------------------------|
+| ------------------------ | ---------------------------------- | -------------------------------------------------------------------------------------------------- |
 | `mobile`                 | `string` (6, 10 and 20 digits)     | Customer Mobile Number                                                                             |
 | `billParameters`         | `{ name: string, value: string}[]` | Bill Parameters. The parameters to send is found in the biller details API.                        |
 | `billParameters[].name`  | `string`                           | Name of the bill parameter. name should match the parameter in biller details API.                 |
 | `billParameters[].value` | `string`                           | Value of the bill parameter. Value is validate according to the regex found in the biller details. |
-
 
 ## Biller
 
 Biller object holds the biller ID.
 
 | parameter | type     | description           |
-|-----------|----------|-----------------------|
+| --------- | -------- | --------------------- |
 | `id`      | `string` | The Biller ID on BBPS |
-
 
 ## Agent
 
 Details pertaining to the Agent which initiates the transaction. Values of the field if provided to NPCI has to be matched against it.
 
-
-| parameter    | type             | description                    |
-|--------------|------------------|--------------------------------|
-| `id`         | `string`         | The Agent ID on BBPS           |
-| `channel`    | `PaymentChannel` | Payment Channel used by Agent. |
-| `ip`         | `string,ipv4`    | Agent server IP address        |
-| `mac`        | `string,mac`     | Server MAC address             |
-| `mobile`     | `string`         | Agent Mobile number            |
-| `geocode`    | `string`         | Agent Geocode                  |
-| `postalCode` | `string`         | Agent Pincode                  |
-| `terminalId` | `string`         | Agent terminal ID              |
-| `imei`       | `string`         | Agent IMEI                     |
-| `ifsc`       | `string`         | Agent IFSC                     |
-| `os`         | `iOS \| Android` | Initiating device OS           |
-| `app`        | `string`         | Initiating app name            |
-
+| parameter    | type               | description                    |
+| ------------ | ------------------ | ------------------------------ |
+| `id`         | `string`           | The Agent ID on BBPS           |
+| `channel`    | `PaymentChannel`   | Payment Channel used by Agent. |
+| `ip`         | `string,ipv4`      | Agent server IP address        |
+| `mac`        | `string,mac`       | Server MAC address             |
+| `mobile`     | `string`           | Agent Mobile number            |
+| `geocode`    | `string`           | Agent Geocode                  |
+| `postalCode` | `string`           | Agent Pincode                  |
+| `terminalId` | `string`           | Agent terminal ID              |
+| `imei`       | `string`           | Agent IMEI                     |
+| `ifsc`       | `string`           | Agent IFSC                     |
+| `os`         | `iOS` or `Android` | Initiating device OS           |
+| `app`        | `string`           | Initiating app name            |
 
 ## Initiating Channel & Required Agent parameters
 
 | Channel    | Agent parameters                             |
-|------------|----------------------------------------------|
+| ---------- | -------------------------------------------- |
 | `BNKBRNCH` | `ifsc`,`mobile`,`geocode`,`postalCode`       |
 | `MOB`      | `ip`,`imei`,`os`,`app`                       |
 | `MOBB`     | `ip`,`imei`,`os`,`app`                       |
@@ -104,7 +98,7 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 ## Initiating Channel & Eligible Payment modes
 
 | Payment Mode     | INT | INTB | MOB | MOBB | ATM | BNKBRNCH | KIOSK | AGT | BSC |
-|------------------|-----|------|-----|------|-----|----------|-------|-----|-----|
+| ---------------- | --- | ---- | --- | ---- | --- | -------- | ----- | --- | --- |
 | Cash             | N   | N    | N   | N    | N   | Y        | Y     | Y   | Y   |
 | Internet Banking | Y   | Y    | Y   | Y    | Y   | N        | N     | N   | N   |
 | Credit Card      | Y   | Y    | Y   | Y    | Y   | Y        | Y     | Y   | Y   |
@@ -119,45 +113,43 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 | Bharat QR        | N   | N    | Y   | Y    | N   | Y        | N     | Y   | Y   |
 | USSD             | N   | N    | Y   | Y    | N   | N        | N     | N   | N   |
 
-
 ## Failure Reason
 
-| parameter | type                           | description                                                                                        |
-|-----------|--------------------------------|----------------------------------------------------------------------------------------------------|
-| code      | `string`                       | Error codes includes Application, Banking and BBPS error codes                                     |
-| message   | `string`                       | Error code description                                                                             |
-| type      | `FUND_TRANSFER \| BBPS \| APP` | Error Type. BBPS errors are due to BBPS, and code and message field contain the actual BBPS error. |
-
+| parameter | type                               | description                                                                                        |
+| --------- | ---------------------------------- | -------------------------------------------------------------------------------------------------- |
+| code      | `string`                           | Error codes includes Application, Banking and BBPS error codes                                     |
+| message   | `string`                           | Error code description                                                                             |
+| type      | `FUND_TRANSFER` or `BBPS` or `APP` | Error Type. BBPS errors are due to BBPS, and code and message field contain the actual BBPS error. |
 
 ## Payment Details
 
 | parameter    | type                          | description                          |
-|--------------|-------------------------------|--------------------------------------|
+| ------------ | ----------------------------- | ------------------------------------ |
 | mode         | [Payment Mode](#payment-mode) | Payment Mode                         |
 | paymentRefId | `string` (6 - 35 characters)  | Payment Reference ID tagged by agent |
 | amount       | `integer`                     | Amount in paise                      |
 | timestamp    | `date-time`                   | Timestamp                            |
 
-
 ## Bill Status
+
 | type         | description                                       |
-|--------------|---------------------------------------------------|
+| ------------ | ------------------------------------------------- |
 | `Processing` | Fetching a bill (or) Paying a bill is in progress |
 | `Success`    | Successfully fetched a bill (or) paid a bill      |
 | `Failure`    | Unable to fetch a bill or pay a bill              |
 
 ## Transaction Status
-| type         | description                                       |
-|--------------|---------------------------------------------------|
-| `Processing` | Transaction is in progress                        |
-| `Success`    | Transaction is successful                         |
-| `Failure`    | Transaction has failed                            |
 
+| type         | description                |
+| ------------ | -------------------------- |
+| `Processing` | Transaction is in progress |
+| `Success`    | Transaction is successful  |
+| `Failure`    | Transaction has failed     |
 
 ## Dispute Status
 
 | type              | description                                                                                                                                             |
-|-------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------|
+| ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `INITIALIZED`     | Initialized                                                                                                                                             |
 | `ASSIGNED`        | Complaint has been accepted.                                                                                                                            |
 | `RE_ASSIGNED`     | When Customer BBPOU re assigned the complaint to the Biller BBPOU.                                                                                      |
@@ -170,7 +162,7 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 ## Bill Period
 
 | type          |
-|---------------|
+| ------------- |
 | `ONETIME`     |
 | `DAILY`       |
 | `WEEKLY`      |
@@ -182,10 +174,10 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 | `ASPRESENTED` |
 | `NA`          |
 
-
 ## Bill Data
+
 | parameter    | type                        | description                                                                              |
-|--------------|-----------------------------|------------------------------------------------------------------------------------------|
+| ------------ | --------------------------- | ---------------------------------------------------------------------------------------- |
 | customerName | `string`                    | Bill owner                                                                               |
 | amount       | `integer`                   | Bill amount in paise                                                                     |
 | dueDate      | `date`                      | Bill due date                                                                            |
@@ -193,40 +185,37 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 | billNumber   | `string`                    | Bill number                                                                              |
 | billPeriod   | [Bill Period](#bill-period) | Bill period of the bill fetch / payment requested. `NA` when bill period is unavailable. |
 
-
 ## Exactness
 
 Amount acceptance by the biller.
 
 | type              | description           |
-|-------------------|-----------------------|
+| ----------------- | --------------------- |
 | `Exact`           | Exact amount          |
 | `Exact and below` | Exact amount or below |
 | `Exact and above` | Exact amount or above |
 
-
 ## Refund Status
 
 | type        | description                                   |
-|-------------|-----------------------------------------------|
+| ----------- | --------------------------------------------- |
 | `Required`  | Refund will be processed for the transaction. |
 | `Requested` | Refund is requested for the transaction.      |
 | `Processed` | Refund is processed.                          |
 
-
 ## Payment Limit
 
 | parameter             | type                          | description                                             |
-|-----------------------|-------------------------------|---------------------------------------------------------|
+| --------------------- | ----------------------------- | ------------------------------------------------------- |
 | paymentMode           | [Payment Mode](#payment-mode) | payment mode                                            |
 | supportsPendingStatus | `bool`                        | Whether payment mode for biller supports pending status |
-| minLimit              | `integer \| null`             | Minimum acceptable amount in paise                      |
-| maxLimit              | `integer \| null`             | Maximum acceptable amount in paise                      |
-
+| minLimit              | `integer` or `null`           | Minimum acceptable amount in paise                      |
+| maxLimit              | `integer` or `null`           | Maximum acceptable amount in paise                      |
 
 ## Dispute Type
+
 | type                                                    | description                                                                |
-|---------------------------------------------------------|----------------------------------------------------------------------------|
+| ------------------------------------------------------- | -------------------------------------------------------------------------- |
 | `account-not-updated`                                   | Transaction Successful, account not updated                                |
 | `double-payment`                                        | Double payment updated                                                     |
 | `paid-to-wrong-account`                                 | Erroneously paid in wrong account                                          |
@@ -235,61 +224,61 @@ Amount acceptance by the biller.
 | `amount-deducted-multiple-times`                        | Amount deducted multiple times                                             |
 | `others`                                                | Other reason                                                               |
 
-
 ## Biller Customer Params
 
-| parameter  | type                      | description                                                      |
-|------------|---------------------------|------------------------------------------------------------------|
-| dataType   | `NUMERIC \| ALPHANUMERIC` | Value format                                                     |
-| maxLength  | `integer \| null`         | Value's max length                                               |
-| minLength  | `integer \| null`         | Value's min length                                               |
-| optional   | `bool`                    | Is the parameter optional                                        |
-| paramName  | `string`                  | Parameter name                                                   |
-| regex      | `string` (Regex)          | Value Regex                                                      |
-| values     | `string`                  | Possible default values                                          |
-| visibility | `bool`                    | Visibility of the customer parameter in COU/AIs front-end screen |
-
+| parameter  | type                        | description                                                      |
+| ---------- | --------------------------- | ---------------------------------------------------------------- |
+| dataType   | `NUMERIC` or `ALPHANUMERIC` | Value format                                                     |
+| maxLength  | `integer` or `null`         | Value's max length                                               |
+| minLength  | `integer` or `null`         | Value's min length                                               |
+| optional   | `bool`                      | Is the parameter optional                                        |
+| paramName  | `string`                    | Parameter name                                                   |
+| regex      | `string` (Regex)            | Value Regex                                                      |
+| values     | `string`                    | Possible default values                                          |
+| visibility | `bool`                      | Visibility of the customer parameter in COU/AIs front-end screen |
 
 ## Fetch API Type
-| type            | description                                                              |
-|-----------------|-------------------------------------------------------------------------|
+
+| type            | description                                                             |
+| --------------- | ----------------------------------------------------------------------- |
 | `BILL_FETCH`    | Biller can accept a Bill Fetch request.                                 |
 | `BILL_VALIDATE` | Biller can accept a Bill Validate request.                              |
 | `BILL_DIRECT`   | Biller can accept direct payment without a Bill Fetch or Bill Validate. |
-
 
 ## Biller Payment Channel
 
 Maxium amount accepted by the biller for the [Payment Channel](#payment-channel).
 
 | parameter             | type                                | description                                                |
-|-----------------------|-------------------------------------|------------------------------------------------------------|
+| --------------------- | ----------------------------------- | ---------------------------------------------------------- |
 | paymentChannel        | [Payment Channel](#payment-channel) | Payment Channel                                            |
 | supportsPendingStatus | `bool`                              | Whether payment channel for biller supports pending status |
-| minLimit              | `integer \| null`                   | Minimum acceptable amount in paise                         |
-| maxLimit              | `integer \| null`                   | Maximum acceptable amount in paise                         |
-
+| minLimit              | `integer` or `null`                 | Minimum acceptable amount in paise                         |
+| maxLimit              | `integer` or `null`                 | Maximum acceptable amount in paise                         |
 
 ## Biller Plan Information
 
-| parameter       | type                 | description                              |
-|-----------------|----------------------|------------------------------------------|
-| amount          | `integer`            | Plan amount in paise                     |
-| id              | `string`             | Plan ID                                  |
-| categoryType    | `string`             | Plan Category defined by the biller.     |
-| categorySubType | `string`             | Plan Sub-Category defined by the biller. |
-| description     | `string`             | Plan description                         |
-| effectiveFrom   | `date`               | Plan effective from                      |
-| effectiveTo     | `date`               | Plan effective to                        |
-| status          | `ACTIVE \| DEACTIVE` | Plan status                              |
+| parameter       | type                   | description                              |
+| --------------- | ---------------------- | ---------------------------------------- |
+| amount          | `integer`              | Plan amount in paise                     |
+| id              | `string`               | Plan ID                                  |
+| categoryType    | `string`               | Plan Category defined by the biller.     |
+| categorySubType | `string`               | Plan Sub-Category defined by the biller. |
+| description     | `string`               | Plan description                         |
+| effectiveFrom   | `date`                 | Plan effective from                      |
+| effectiveTo     | `date`                 | Plan effective to                        |
+| status          | `ACTIVE` or `DEACTIVE` | Plan status                              |
 
+<hr class="primary" />
 
-## Transaction - `/transactions`
+## Transaction
+
+`/transactions`
 
 ### Query Parameters
 
 | parameter | type                                      | description                                                                                                                                                   |
-|-----------|-------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| --------- | ----------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | limit     | `integer`                                 | Default: `250`, Maximum: `1000`, Minimum: `1`                                                                                                                 |
 | after     | `string`                                  |                                                                                                                                                               |
 | startDate | `date`                                    | start date of the timestamp provided by the partner while making the request. Full-date notation as defined by RFC 3339, section 5.6, for example, 2017-07-21 |
@@ -298,11 +287,10 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | status    | [Transaction Status](#transaction-status) | Transaction Status                                                                                                                                            |
 | mobile    | `string` (6, 10 and 20 digits)            | Customer Mobile Number                                                                                                                                        |
 
-
 ### Response
 
 | parameter            | type                                      | description                                                     |
-|----------------------|-------------------------------------------|-----------------------------------------------------------------|
+| -------------------- | ----------------------------------------- | --------------------------------------------------------------- |
 | refId                | `string`                                  | BBPS Reference ID                                               |
 | status               | [Transaction Status](#transaction-status) | Transaction Status                                              |
 | transactionId        | `string`                                  | Setu Transaction ID                                             |
@@ -313,14 +301,16 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | timestamp            | `date-time`                               | Transaction timestamp                                           |
 | refundStatus         | [Refund Status](#refund-status)           | Refund status if the payment failed and the amount was debited. |
 
+<hr class="primary" />
 
+## Dispute
 
-## Dispute - `/disputes`
+`/disputes`
 
 ### Query Parameters
 
 | parameter            | type                              | description                                   |
-|----------------------|-----------------------------------|-----------------------------------------------|
+| -------------------- | --------------------------------- | --------------------------------------------- |
 | status               | [Dispute Status](#dispute-status) | Dispute status                                |
 | limit                | `integer`                         | Default: `250`, Maximum: `1000`, Minimum: `1` |
 | after                | `string`                          |                                               |
@@ -329,11 +319,10 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | billerIds            | `string[]`                        | DIsputes' Biller ID                           |
 | customerMobileNumber | `string` (6, 10 and 20 digits)    | Customer Mobile Number                        |
 
-
 ### Response
 
 | parameter            | type                              | description                                   |
-|----------------------|-----------------------------------|-----------------------------------------------|
+| -------------------- | --------------------------------- | --------------------------------------------- |
 | assigned             | `string`                          | BBPOU to which the complaint is assigned      |
 | billerId             | `string`                          | Dispute's Transaction Biller ID               |
 | complaintId          | `string`                          | Complaint ID for the dispute provided by BBPS |
@@ -346,15 +335,16 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | responseReason       | `string`                          | BBPS Response reason for the dispute request  |
 | transactionId        | `string`                          | Setu Transaction ID                           |
 
+<hr class="primary" />
 
+## Biller MDM
 
-## Biller MDM - `/billers`
-
+`/billers`
 
 ### Query Parameters
 
 | parameter      | type                                    | description                                                                                                             |
-|----------------|-----------------------------------------|-------------------------------------------------------------------------------------------------------------------------|
+| -------------- | --------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- |
 | categoryName   | `string[]`                              | Category of the biller                                                                                                  |
 | ids            | `string[]`                              | biller Ids                                                                                                              |
 | limit          | `integer`                               | Default: `250`, Maximum: `1000`, Minimum: `1`                                                                           |
@@ -367,10 +357,10 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | paymentChannel | [Payment Channel](#payment-channel)`[]` |                                                                                                                         |
 | paymentMode    | [Payment Mode](#payment-mode)`[]`       |                                                                                                                         |
 
-
 ### Response
+
 | parameter              | type                                                    | description                                                                                                                             |
-|------------------------|---------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------|
+| ---------------------- | ------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------- |
 | categoryName           | `string`                                                | Biller Category                                                                                                                         |
 | city                   | `string`                                                | Biller City                                                                                                                             |
 | coverage               | `string`                                                | Biller coverage                                                                                                                         |
@@ -391,50 +381,61 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | state                  | `string`                                                | Biller State                                                                                                                            |
 | plans                  | [Biller-Plan-Information](#biller-plan-information)`[]` | Plans provided by the biller.                                                                                                           |
 
+<hr class="primary" />
 
-## Dispute Request - `/bills/dispute/request`
+## Dispute Request
+
+`/bills/dispute/request`
 
 ### Request Body
 
 | parameter      | type                          | description         |
-|----------------|-------------------------------|---------------------|
+| -------------- | ----------------------------- | ------------------- |
 | txnReferenceId | `string`                      | Setu Transaction ID |
 | disputeType    | [Dispute Type](#dispute-type) | Dispute type        |
 | description    | `string` (100 characters)     | Dispute description |
 
+<hr class="primary" />
 
-## Dispute Response - `/bills/dispute/response`
+## Dispute Response
+
+`/bills/dispute/response`
 
 ### Response Body
 
 | parameter  | type                              | description                                    |
-|------------|-----------------------------------|------------------------------------------------|
+| ---------- | --------------------------------- | ---------------------------------------------- |
 | refId      | `string`                          | BBPS Reference ID                              |
 | disputeId  | `string`                          | Dispute ID used for the complaint              |
 | status     | [Dispute Status](#dispute-status) | Dispute Status                                 |
 | assignedTo | `string`                          | The entity who has this complaint assigned to. |
 | remarks    | `string`                          | Remarks of the complaint                       |
 
+<hr class="primary" />
 
+## Fetch Request
 
-## Fetch Request - `/bills/fetch/request`
+`/bills/fetch/request`
 
 ### Request Body
 
 | parameter | type                  | description                                                         |
-|-----------|-----------------------|---------------------------------------------------------------------|
+| --------- | --------------------- | ------------------------------------------------------------------- |
 | customer  | [Customer](#customer) | Customer Object                                                     |
 | biller    | [Biller](#biller)     | Biller Object                                                       |
 | Agent     | [Agent](#agent)       | Agent Object                                                        |
 | autoFetch | `bool`                | On `true`, enables auto-fetch for the bill on successful bill fetch |
 
+<hr class="primary" />
 
-## Fetch Response - `/bills/fetch/response`
+## Fetch Response
+
+`/bills/fetch/response`
 
 ### Response Body
 
 | parameter      | type                                | description                                             |
-|----------------|-------------------------------------|---------------------------------------------------------|
+| -------------- | ----------------------------------- | ------------------------------------------------------- |
 | refId          | `string`                            | BBPS reference ID for the fetch request.                |
 | status         | [Bill Status](#bill-status)         | Bill fetch request status.                              |
 | failureReason  | [Failure Reason](#failure-reason)   | Failure reason on status `Failure`                      |
@@ -445,26 +446,32 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | paymentLimits  | [Payment Limit](#payment-limit)`[]` | Payment limits                                          |
 | autoFetchHash  | `string`                            | Auto fetch identifier for the bill.                     |
 
+<hr class="primary" />
 
-## Payment Request - `/bills/payment/request`
+## Payment Request
+
+`/bills/payment/request`
 
 ### Request Body
 
 | parameter      | type                                | description                                              |
-|----------------|-------------------------------------|----------------------------------------------------------|
+| -------------- | ----------------------------------- | -------------------------------------------------------- |
 | customer       | [Customer](#customer)               | Customer Object                                          |
 | Biller         | [Biller](#biller)                   | Biller Object                                            |
 | Agent          | [Agent](#agent)                     | Agent Object                                             |
 | refId          | `string`                            | BBPS Reference ID of Fetch Request for non-adhoc billers |
 | paymentDetails | [Payment Details](#payment-details) | Payment information for paying the bill                  |
 
+<hr class="primary" />
 
-## Payment Response - `/bills/payment/response`
+## Payment Response
+
+`/bills/payment/response`
 
 ### Response Body
 
 | parameter      | type                                | description                                                     |
-|----------------|-------------------------------------|-----------------------------------------------------------------|
+| -------------- | ----------------------------------- | --------------------------------------------------------------- |
 | refId          | `string`                            | BBPS Reference ID                                               |
 | status         | [Bill Status](#bill-status)         | Transaction Status                                              |
 | failureReason  | [Failure Reason](#failure-reason)   | Failure information in case of Transaction failure              |
@@ -474,4 +481,3 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | paymentDetails | [Payment Details](#payment-details) | Payment Details for the transaction                             |
 | additionalInfo | `{"name":"value"}[]`                | Additional information of the bill sent by the biller           |
 | refundStatus   | [Refund Status](#refund-status)     | Refund status if the payment failed and the amount was debited. |
-
