--- a/content/data/bank-statement-analyser/quickstart.mdx
+++ b/content/data/bank-statement-analyser/quickstart.mdx
@@ -7,7 +7,10 @@ visible_in_sidebar: true
 
 ## Quickstart Guide
 
-Here is a quick summary of steps to help you integrate with Setu’s BSA.
+Here is a quick summary of steps to help you integrate with Setu’s BSA. Before you start, there are some key terms that will be referred to periodically in the documentation—
+
+-   **FI Datablock**— FIData blocks is the data received from the FIP (Financial Information Provider), via the AA. Currently, we only support bank statement data
+-   **Report**— A report is the template in which the FIU wants the insights to be generated. An FIU can pick and choose exactly what modules should be added to a report based on their needs. For example, if an FIU only wants to get the income and expenses of a customer, the report can contain only those two modules
 
 <hr className="primary" />
 
